[REFACTOR] CORS config